Changes from version 1.0.0 to version 1.0.1
-------------------------------------------

   - Added SetDebug() function that allows the caller to set the
     debug mode. In debug mode the library will print the server
     URL, query and responses to stdout.
   - Fixed a few crash bugs in the bitzi id3/mp3 metadata code
   - Changed the bitzi plugin manager to not load plugins, in order
     to avoid the unecessary dependency on dlopen/dlsym/dlclose.
   - Removed a bunch of generates files from the CVS archive.