@@ -372,6 +372,19 @@ int       mb_SetResultRDF      (musicbrainz_t o, char *RDF);
 void      mb_GetIDFromURL      (musicbrainz_t o, char *url, char *id, 
                                 int idLen);
 /**
+ * Calculate the sha1 hash for a given filename. This function is
+ * often used in conjunction with an MBQ_ExchangeMetadataLite query,
+ * to calculate the needed arguments for a metadata exchange with the
+ * MusicBrainz server.
+ * @see mb_QueryWithArgs
+ * @param o the musicbrainz_t object returned from mb_New()
+ * @param fileName the file to calculate a sha1 value for
+ * @param sha1 a string with space for 41 bytes that will hold the sha1 value
+ * @return true if the sha1 value was successfully calculated, false otherwise.
+ */
+int       mb_CalculateSha1     (musicbrainz_t o, char *fileName, 
+                                char sha1[41]);
+/**
  * Calculate Bitzi bitprint info for a given filename. This function is
  * often used in conjunction with an MBQ_ExchangeMetadata query,
  * to calculate the needed arguments for a metadata exchange with the
